--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -12,8 +12,10 @@ News
     {% if news %}
     <h5>Всего новостей: {{ news|length }} </h5>
     {% for specificnews in news %}
-    <h3>{{ specificnews.header|censor }}</h3>
+    <h3><a href="{{ specificnews.id }}">{{ specificnews.header|censor }}</a></h3>
     <h5>{{ specificnews.text|truncatechars:50 }}</h5>
     {% endfor %}
     {% endif %}
 {% endblock content %}
+
+
